unpackaged/main/default/objects/PS_Audit_Log__c/PS_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>ProfitStars Callout Audit Log</label>
    <nameField>
        <displayFormat>AuditLog-{000000}</displayFormat>
        <label>ProfitStars Callout Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfitStars Callout Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>