unpackaged/main/default/objects/PS_Audit_Log__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>