unpackaged/main/default/objects/PS_Audit_Log__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>ProfitStars Callout Audit Logs</relationshipLabel>
    <relationshipName>ProfitStars_Callout_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>