unpackaged/main/default/objects/PS_Audit_Log__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>What type of call generated this audit log</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Velocity</fullName>
            </value>
            <value>
                <fullName>Guid</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>