unpackaged/main/default/objects/PS_Audit_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Api returned the following Error message</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>