unpackaged/main/default/objects/PS_Audit_Log__c/fields/Legacy_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy CreatedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Audit_Log_s101</relationshipName>
    <type>Lookup</type>
</CustomField>