unpackaged/main/default/objects/PS_Audit_Log__c/fields/Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Update_Field__c</fullName>
    <description>R166298</description>
    <label>Update Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Tax ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>