unpackaged/main/default/objects/PS_Audit_Log__c/fields/Value_Plus__c.field-meta.xml
<CustomField>
    <fullName>Value_Plus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>ProfitStars Callout Audit Logs</relationshipLabel>
    <relationshipName>ProfitStars_Callout_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>